--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	</head>
 	<body>
-		<header>
+		<header id="home">
 			<!-- navbar -->
 			<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 				<div class="container">
@@ -30,16 +30,16 @@
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav ms-auto">
 							<li class="nav-item">
-								<a class="nav-link" href="#">Inicio</a>
+								<a class="nav-link" href="#home">Inicio</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Quienes somos</a>
+								<a class="nav-link" href="#quienesomos">Quienes somos</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Destacados</a>
+								<a class="nav-link" href="#destacados">Destacados</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Contacto</a>
+								<a class="nav-link" href="#contactos">Contacto</a>
 							</li>
 						</ul>
 					</div>
@@ -47,7 +47,7 @@
 			</nav>
 
 		<!-- Carousel -->
-		<section id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		<section id="carouselExampleIndicators aboutus" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
 					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -82,7 +82,7 @@
 		</section>
 		</header>
 		<!-- Quienes somos -->
-		<section class="somos">
+		<section class="somos hidden-xs d-none d-md-block">
 		<h1 id="quienesomos">¿Quiénes somos?</h1>
 		<hr class =linea>
 
@@ -130,9 +130,10 @@
 			</div>
 		</div>
 		</div>
-	
+	</section>
 	<!-- Dest-Cards -->
-	<h2 id="destacados" class="destacados">Destacado</h2>
+	<section id="destacados">
+	<h2 class="destacados">Destacado</h2>
 	<hr class =linea>
 	
 	<div class="container">
@@ -225,13 +226,13 @@
 			</div>
 		  </div>
 	</div>
-
-	</div>
-	</div>
+</section>
+<section class="typeform">
 	<h3 id="contactos" class="contacto">Contacto</h3>
 	<hr>
 	<div id="contacto" class="typeform-widget" data-toggle="tooltip" data-placement="top" title="Contacta con nosotros" data-url="https://form.typeform.com/to/Xo1Q6yhz?typeform-medium=embed-snippet" style="width: 60%; height: 450px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-		</section>
+</section>
+<section id="barra-fondo">
 	<footer id="footer" class="container-fluid  d-md-block  bg-info section-icons fondo-footer">
 		<div class="container">
 		<div class="row">
@@ -247,6 +248,7 @@
 			</div>
 		</div>
 	</footer>
+</section>
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 	</body>
