--- a/index.html
+++ b/index.html
@@ -228,9 +228,7 @@
 	</div>
 </section>
 <section class="typeform">
-	<h3 id="contactos" class="contacto">Contacto</h3>
-	<hr>
-	<div id="contacto" class="typeform-widget" data-toggle="tooltip" data-placement="top" title="Contacta con nosotros" data-url="https://form.typeform.com/to/Xo1Q6yhz?typeform-medium=embed-snippet" style="width: 60%; height: 450px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+	<div data-tf-widget="fos1umNh" data-tf-iframe-props="title=Viajes chile" data-tf-medium="snippet" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 </section>
 <section id="barra-fondo">
 	<footer id="footer" class="container-fluid  d-md-block  bg-info section-icons fondo-footer">
