ajuste container typeform

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 		  </div>
 	</div>
 </section>
-<section class="typeform">
+<section class="typeform container">
 	<div data-tf-widget="fos1umNh" data-tf-iframe-props="title=Viajes chile" data-tf-medium="snippet" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 </section>
 <section id="barra-fondo">
