--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 					<!-- desc-content-1 -->
 					<article class="desc-head">
 						<!-- desc-icon-1 -->
-						<i class="fas fa-plane fa-2x"></i>
+						<i class="fas fa-plane fa-2x" data-toggle="tooltip" data-placement="top" title="Vuela por todo lo largo de Chile!"></i>
 					</article>
 					<!-- desc-text-1 -->
-					<p class="desc-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos deleniti totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta excepturi. Deserunt voluptas eveniet blanditiis possimus nemo!. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam magni, eaque doloribus cum tenetur itaque neque quam aspernatur delectus veritatis fuga praesentium numquam corporis eveniet, nobis, similique quis obcaecati!</p>
+					<p class="desc-text1 d-none">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos deleniti totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta excepturi. Deserunt voluptas eveniet blanditiis possimus nemo!. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam magni, eaque doloribus cum tenetur itaque neque quam aspernatur delectus veritatis fuga praesentium numquam corporis eveniet, nobis, similique quis obcaecati!</p>
 				</div>
 				</div>
 			
@@ -108,10 +108,10 @@
 				<!-- desc-content-2 -->
 				<div class="parrafos">
 					<!-- desc-text-2 -->
-					<p class="desc-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos deleniti totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta excepturi. Deserunt voluptas eveniet blanditiis possimus nemo! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed error, earum ipsum vero nulla minus omnis dolor quibusdam accusamus pariatur ut eum totam impedit consequatur similique dicta? Tenetur, voluptatibus inventore!</p>
+					<p class="desc-text2 d-none">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos deleniti totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta excepturi. Deserunt voluptas eveniet blanditiis possimus nemo! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed error, earum ipsum vero nulla minus omnis dolor quibusdam accusamus pariatur ut eum totam impedit consequatur similique dicta? Tenetur, voluptatibus inventore!</p>
 				<article class="desc-head">
 					<!-- desc-icon-2 -->
-					<i class="fa fa-anchor fa-2x" aria-hidden="true"></i>
+					<i class="fa fa-anchor fa-2x" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Disfruta nuestros lagos, rios y playas!"></i>
 				</article>
 				</div>
 			</div>
@@ -122,10 +122,10 @@
 				<div class="parrafos">
 					<article class="desc-head">
 						<!-- desc-icon-3 -->
-						<i class="fa fa-car fa-2x" aria-hidden="true"></i>
+						<i class="fa fa-car fa-2x" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Viaja por nuestras rutas!"></i>
 					</article>
 					<!-- desc-text-3 -->
-					<p class="desc-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos deleniti totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta excepturi. Deserunt voluptas eveniet blanditiis possimus nemo! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dolores autem vitae voluptas optio dolor dicta itaque sed. Odio non exercitationem illo ipsum aut nihil magni omnis rem natus pariatur.</p>
+					<p class="desc-text3 d-none">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos deleniti totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta excepturi. Deserunt voluptas eveniet blanditiis possimus nemo! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dolores autem vitae voluptas optio dolor dicta itaque sed. Odio non exercitationem illo ipsum aut nihil magni omnis rem natus pariatur.</p>
 				</div>
 			</div>
 		</div>
@@ -227,15 +227,17 @@
 		  </div>
 	</div>
 </section>
-<section class="typeform container">
-	<div data-tf-widget="fos1umNh" data-tf-iframe-props="title=Viajes chile" data-tf-medium="snippet" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+<section class="typeform">
+	<div class="container">
+		<div data-tf-widget="fos1umNh" data-tf-iframe-props="title=Viajes chile" data-tf-medium="snippet" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+	</div>
 </section>
 <section id="barra-fondo">
 	<footer id="footer" class="container-fluid  d-md-block  bg-info section-icons fondo-footer">
-		<div class="container">
+		<div class="container" id="contactos">
 		<div class="row">
 				<div class="col-lg-4 pagos-creditos hidden-xs">
-				<h4 id="viajes" class="pt-1 font-weight-bold" data-toggle="tooltip" data-placement="top" title="Viaja junto a con nosotros">VIAJES CHILE</h4>
+				<h4 id="viajes" class="pt-1 font-weight-bold" data-toggle="tooltip" data-placement="top" title="Viaja con nosotros">VIAJES CHILE</h4>
 				</div>
 				<div class="col-lg-8 text-right fa-iconos-credito pt-1 foot">
 					<a href="https://github.com/droflim/viajeschile" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
@@ -249,6 +251,7 @@
 </section>
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+		<script src="assets/js/script.js"></script>
 	</body>
 </html>
 	
